# UniverseScreener

./: .coverage  .cursorrules  .gitignore  Actions_Ideas.md  CHANGELOG.md  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_report_phase2.txt
config/: default.yaml
config/profiles/: aggressive.yaml  conservative.yaml  research.yaml
docs/: API_REFERENCE.md  DEPLOYMENT.md  PERFORMANCE.md  TEST_REPORT_PHASE2.md  TEST_REPORT_PHASE3.md
docs/architecture/: 01_requirements.md  02_architecture_overview.md  03_critical_improvements.md  04_implementation_roadmap.md
docs/decisions/: README.md
scripts/: check_maturity.py  check_test_aspects.py
src/universe_screener/: __init__.py
src/universe_screener/adapters/: __init__.py  cached_provider.py  console_logger.py  database_provider.py  metrics_collector.py  mock_provider.py
src/universe_screener/caching/: __init__.py  cache_manager.py
src/universe_screener/config/: __init__.py  loader.py  models.py
src/universe_screener/derivatives/: __init__.py  derivative_resolver.py  entities.py  strategies.py
src/universe_screener/domain/: __init__.py  entities.py  value_objects.py
src/universe_screener/filters/: __init__.py  data_quality.py  liquidity.py  liquidity_strategies.py  structural.py
src/universe_screener/interfaces/: __init__.py  audit_logger.py  filter_stage.py  health_monitor.py  metrics_collector.py  universe_provider.py
src/universe_screener/observability/: __init__.py  health_monitor.py  observability_manager.py  snapshot_manager.py  version_manager.py
src/universe_screener/pipeline/: __init__.py  data_context.py  screening_pipeline.py
src/universe_screener/registry/: __init__.py  filter_registry.py
src/universe_screener/resilience/: __init__.py  error_handler.py
src/universe_screener/validation/: __init__.py  data_validator.py  request_validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_config.yaml
tests/integration/: __init__.py  test_end_to_end_with_derivatives.py  test_multi_asset_class_screening.py  test_pipeline_with_registry.py  test_screening_pipeline.py
tests/performance/: __init__.py  test_cached_screening_performance.py  test_screening_performance.py
tests/unit/: __init__.py  test_cache_manager.py  test_cached_provider.py  test_cfd_resolver.py  test_config_loader.py  test_crypto_liquidity.py  test_data_quality_filter.py  test_data_validator.py  test_derivative_resolver.py  test_error_handler.py  test_filter_registry.py  test_forex_liquidity.py  test_health_monitor.py  test_liquidity_filter.py  test_observability_manager.py  test_request_validator.py  test_snapshot_manager.py  test_structural_filter.py  test_turbo_resolver.py  test_version_manager.py
