# pyproject.toml - Template for Project Configuration

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universe_screener"
version = "0.1.0"
description = "Multi-stage asset filtering pipeline for trading systems"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here
    # Example:
    # "pandas>=1.3.0",
    # "numpy>=1.21.0",
    # "torch>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-benchmark>=3.4.1",
    "pre-commit>=2.20.0",
]

# ============================================================================
# PROJECT MATURITY CONFIGURATION
# ============================================================================
# This section controls how Cursor generates tests and enforces quality checks
# 
# Maturity Levels:
#   EXPLORATION    - No tests, rapid prototyping
#   DEVELOPMENT    - Test critical components only
#   STABILIZATION  - Comprehensive test suite
#   PRODUCTION     - Strict enforcement, full test coverage
# ============================================================================

[tool.project]
maturity = "DEVELOPMENT"  # Change this as your project matures

# Set to true after running "generate test-strategy" command in Cursor
test_strategy_generated = false

# ============================================================================
# COMPONENT-LEVEL MATURITY (Optional - Advanced Usage)
# ============================================================================
# Uncomment and customize to set different maturity levels per component
# This allows critical components to have PRODUCTION-level testing
# while experimental features stay at EXPLORATION level
# ============================================================================

# [tool.project.maturity.components]
# "src/ensemble" = "PRODUCTION"       # Critical: money decisions
# "src/signals" = "PRODUCTION"        # Critical: buy/sell triggers
# "src/risk" = "PRODUCTION"           # Critical: position sizing
# "src/data_fetch" = "DEVELOPMENT"    # Important but less critical
# "src/visualization" = "EXPLORATION" # Nice to have, experimental

# ============================================================================
# TESTING CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Strict marker validation
    "--tb=short",           # Short traceback format
    "--cov-report=term-missing", # Show missing coverage
]

# Markers for different test types
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "slow: Slow tests (e.g., full backtests)",
    "critical: Critical money-logic tests (must pass)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Coverage targets based on maturity level
# EXPLORATION:    0%
# DEVELOPMENT:   40%
# STABILIZATION: 70%
# PRODUCTION:    80%
fail_under = 0  # Update based on maturity level

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# CODE QUALITY TOOLS (Optional)
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set true for PRODUCTION

# ============================================================================
# MATURITY TRANSITION CHECKLIST
# ============================================================================
# 
# EXPLORATION → DEVELOPMENT:
# [ ] Identify critical components (money/trading logic)
# [ ] Set maturity = "DEVELOPMENT"
# [ ] Generate tests for critical components only
# 
# DEVELOPMENT → STABILIZATION:
# [ ] Core algorithm is stable
# [ ] Run "generate test-strategy" in Cursor
# [ ] Set maturity = "STABILIZATION"
# [ ] Create test fixtures (sample_news.json, sample_prices.csv)
# [ ] Generate comprehensive test suite
# 
# STABILIZATION → PRODUCTION:
# [ ] All tests passing
# [ ] Coverage >= 80%
# [ ] Set maturity = "PRODUCTION"
# [ ] Enable pre-commit hooks: pre-commit install
# [ ] Review TEST_STRATEGY.md
# [ ] Security audit (no API keys in code/logs)
# [ ] Performance benchmarks met
# 
# ============================================================================
